[gd_scene format=4 uid="uid://u4epb2mxituc"]

[ext_resource type="PackedScene" uid="uid://c3udix1j1wkol" path="res://player_character.tscn" id="1_3x8yu"]
[ext_resource type="Script" uid="uid://b76s3usqsbv7e" path="res://mine_level.gd" id="1_ksevt"]
[ext_resource type="TileSet" uid="uid://cedbq7dlya52b" path="res://mine_tile_set.tres" id="2_08n1b"]

[node name="MineLevel" type="Node2D" unique_id=2076899661]
y_sort_enabled = true
script = ExtResource("1_ksevt")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1592437344]
zoom = Vector2(4, 4)

[node name="FloorLayer" type="TileMapLayer" parent="." unique_id=319265561]
tile_set = ExtResource("2_08n1b")

[node name="WallVisualLayer" type="TileMapLayer" parent="." unique_id=1229092932]
y_sort_enabled = true
tile_set = ExtResource("2_08n1b")

[node name="WallPhysicalLayer" type="TileMapLayer" parent="." unique_id=865466753]
visible = false
z_index = 1
tile_map_data = PackedByteArray("AADw//f/AAADAAAAAADw//j/AAADAAEAAADw//n/AAADAAEAAADw//r/AAADAAEAAADw//v/AAADAAEAAADw//z/AAADAAEAAADw//3/AAADAAEAAADw//7/AAADAAEAAADw////AAADAAEAAADw/wAAAAADAAEAAADw/wEAAAADAAEAAADw/wIAAAADAAEAAADw/wMAAAADAAEAAADw/wQAAAADAAEAAADw/wUAAAADAAEAAADw/wYAAAADAAEAAADw/wcAAAADAAEAAADw/wgAAAADAAEAAADw/wkAAAADAAIAAADx//f/AAAEAAAAAADx//j/AAAEAAEAAADx//n/AAAEAAEAAADx//r/AAAEAAEAAADx//v/AAAEAAEAAADx//z/AAAEAAEAAADx//3/AAAEAAEAAADx//7/AAAEAAEAAADx////AAAEAAEAAADx/wAAAAAEAAEAAADx/wEAAAAEAAEAAADx/wIAAAAEAAEAAADx/wMAAAAEAAEAAADx/wQAAAAEAAEAAADx/wUAAAAEAAEAAADx/wYAAAAEAAEAAADx/wcAAAAEAAEAAADx/wgAAAAEAAEAAADx/wkAAAAEAAIAAADy//f/AAAEAAAAAADy//j/AAAEAAEAAADy//n/AAABAAQAAADy//r/AAAFAAEAAADy//v/AAAFAAEAAADy//z/AAAFAAEAAADy//3/AAAFAAEAAADy//7/AAAFAAEAAADy////AAAFAAEAAADy/wAAAAAFAAEAAADy/wEAAAAFAAEAAADy/wIAAAAFAAEAAADy/wMAAAAFAAEAAADy/wQAAAAFAAEAAADy/wUAAAAFAAEAAADy/wYAAAAFAAEAAADy/wcAAAABAAMAAADy/wgAAAAEAAEAAADy/wkAAAAEAAIAAADz//f/AAAEAAAAAADz//j/AAAEAAEAAADz//n/AAAEAAIAAADz/wcAAAAEAAAAAADz/wgAAAAEAAEAAADz/wkAAAAEAAIAAAD0//f/AAAEAAAAAAD0//j/AAAEAAEAAAD0//n/AAAEAAIAAAD0/wcAAAAEAAAAAAD0/wgAAAAEAAEAAAD0/wkAAAAEAAIAAAD1//f/AAAEAAAAAAD1//j/AAAEAAEAAAD1//n/AAAEAAIAAAD1/wcAAAAEAAAAAAD1/wgAAAAEAAEAAAD1/wkAAAAEAAIAAAD2//f/AAAEAAAAAAD2//j/AAAEAAEAAAD2//n/AAAEAAIAAAD2/wcAAAAEAAAAAAD2/wgAAAAEAAEAAAD2/wkAAAAEAAIAAAD3//f/AAAEAAAAAAD3//j/AAAEAAEAAAD3//n/AAAEAAIAAAD3//7/AAADAAAAAAD3////AAADAAEAAAD3/wAAAAADAAEAAAD3/wEAAAADAAIAAAD3/wcAAAAEAAAAAAD3/wgAAAAEAAEAAAD3/wkAAAAEAAIAAAD4//f/AAAEAAAAAAD4//j/AAAEAAEAAAD4//n/AAAEAAIAAAD4//3/AAADAAAAAAD4//7/AAAAAAMAAAD4////AAAEAAEAAAD4/wAAAAAEAAEAAAD4/wEAAAAEAAIAAAD4/wcAAAAEAAAAAAD4/wgAAAAEAAEAAAD4/wkAAAAEAAIAAAD5//f/AAAEAAAAAAD5//j/AAAEAAEAAAD5//n/AAAEAAIAAAD5//3/AAAEAAAAAAD5//7/AAAEAAEAAAD5////AAAEAAEAAAD5/wAAAAABAAQAAAD5/wEAAAAFAAIAAAD5/wcAAAAEAAAAAAD5/wgAAAAEAAEAAAD5/wkAAAAEAAIAAAD6//f/AAAEAAAAAAD6//j/AAAEAAEAAAD6//n/AAAEAAIAAAD6//3/AAAEAAAAAAD6//7/AAAEAAEAAAD6////AAAEAAEAAAD6/wAAAAAEAAIAAAD6/wcAAAAEAAAAAAD6/wgAAAAEAAEAAAD6/wkAAAAEAAIAAAD7//f/AAAEAAAAAAD7//j/AAAEAAEAAAD7//n/AAAEAAIAAAD7//3/AAAFAAAAAAD7//7/AAABAAMAAAD7////AAABAAQAAAD7/wAAAAAFAAIAAAD7/wcAAAAEAAAAAAD7/wgAAAAEAAEAAAD7/wkAAAAEAAIAAAD8//f/AAAEAAAAAAD8//j/AAAEAAEAAAD8//n/AAAEAAIAAAD8//7/AAAFAAAAAAD8////AAAFAAIAAAD8/wcAAAAEAAAAAAD8/wgAAAAEAAEAAAD8/wkAAAAEAAIAAAD9//f/AAAEAAAAAAD9//j/AAAEAAEAAAD9//n/AAAEAAIAAAD9/wcAAAAEAAAAAAD9/wgAAAAEAAEAAAD9/wkAAAAEAAIAAAD+//f/AAAEAAAAAAD+//j/AAAEAAEAAAD+//n/AAAEAAIAAAD+/wcAAAAEAAAAAAD+/wgAAAAEAAEAAAD+/wkAAAAEAAIAAAD///f/AAAEAAAAAAD///j/AAAEAAEAAAD///n/AAAEAAIAAAD//wcAAAAEAAAAAAD//wgAAAAEAAEAAAD//wkAAAAEAAIAAAAAAPf/AAAEAAAAAAAAAPj/AAAEAAEAAAAAAPn/AAAEAAIAAAAAAAcAAAAEAAAAAAAAAAgAAAAEAAEAAAAAAAkAAAAEAAIAAAABAPf/AAAEAAAAAAABAPj/AAAEAAEAAAABAPn/AAAEAAIAAAABAAMAAAADAAAAAAABAAQAAAADAAIAAAABAAcAAAAEAAAAAAABAAgAAAAEAAEAAAABAAkAAAAEAAIAAAACAPf/AAAEAAAAAAACAPj/AAAEAAEAAAACAPn/AAAEAAIAAAACAAMAAAAEAAAAAAACAAQAAAAEAAIAAAACAAcAAAAEAAAAAAACAAgAAAAEAAEAAAACAAkAAAAEAAIAAAADAPf/AAAEAAAAAAADAPj/AAAEAAEAAAADAPn/AAAEAAIAAAADAPz/AAADAAAAAAADAP3/AAADAAIAAAADAAMAAAAEAAAAAAADAAQAAAAEAAIAAAADAAcAAAAEAAAAAAADAAgAAAAEAAEAAAADAAkAAAAEAAIAAAAEAPf/AAAEAAAAAAAEAPj/AAAEAAEAAAAEAPn/AAAEAAIAAAAEAPv/AAADAAAAAAAEAPz/AAAAAAMAAAAEAP3/AAAEAAIAAAAEAAIAAAADAAAAAAAEAAMAAAAAAAMAAAAEAAQAAAAEAAIAAAAEAAcAAAAEAAAAAAAEAAgAAAAEAAEAAAAEAAkAAAAEAAIAAAAFAPf/AAAEAAAAAAAFAPj/AAAEAAEAAAAFAPn/AAAEAAIAAAAFAPv/AAAFAAAAAAAFAPz/AAAFAAEAAAAFAP3/AAAFAAIAAAAFAAIAAAAEAAAAAAAFAAMAAAAEAAEAAAAFAAQAAAAEAAIAAAAFAAcAAAAEAAAAAAAFAAgAAAAEAAEAAAAFAAkAAAAEAAIAAAAGAPf/AAAEAAAAAAAGAPj/AAAEAAEAAAAGAPn/AAAEAAIAAAAGAAEAAAADAAAAAAAGAAIAAAAAAAMAAAAGAAMAAAABAAQAAAAGAAQAAAAFAAIAAAAGAAcAAAAEAAAAAAAGAAgAAAAEAAEAAAAGAAkAAAAEAAIAAAAHAPf/AAAEAAAAAAAHAPj/AAAEAAEAAAAHAPn/AAAEAAIAAAAHAAAAAAADAAAAAAAHAAEAAAAAAAMAAAAHAAIAAAABAAQAAAAHAAMAAAAFAAIAAAAHAAcAAAAEAAAAAAAHAAgAAAAEAAEAAAAHAAkAAAAEAAIAAAAIAPf/AAAEAAAAAAAIAPj/AAAEAAEAAAAIAPn/AAAEAAIAAAAIAAAAAAAFAAAAAAAIAAEAAAAFAAEAAAAIAAIAAAAFAAIAAAAIAAcAAAAEAAAAAAAIAAgAAAAEAAEAAAAIAAkAAAAEAAIAAAAJAPf/AAAEAAAAAAAJAPj/AAAEAAEAAAAJAPn/AAAEAAIAAAAJAAcAAAAEAAAAAAAJAAgAAAAEAAEAAAAJAAkAAAAEAAIAAAAKAPf/AAAEAAAAAAAKAPj/AAAEAAEAAAAKAPn/AAAEAAIAAAAKAAcAAAAEAAAAAAAKAAgAAAAEAAEAAAAKAAkAAAAEAAIAAAALAPf/AAAEAAAAAAALAPj/AAAEAAEAAAALAPn/AAAEAAIAAAALAAcAAAAEAAAAAAALAAgAAAAEAAEAAAALAAkAAAAEAAIAAAAMAPf/AAAEAAAAAAAMAPj/AAAEAAEAAAAMAPn/AAAEAAIAAAAMAAcAAAAEAAAAAAAMAAgAAAAEAAEAAAAMAAkAAAAEAAIAAAANAPf/AAAEAAAAAAANAPj/AAAEAAEAAAANAPn/AAAAAAQAAAANAPr/AAADAAEAAAANAPv/AAADAAEAAAANAPz/AAADAAEAAAANAP3/AAADAAEAAAANAP7/AAADAAEAAAANAP//AAADAAEAAAANAAAAAAADAAEAAAANAAEAAAADAAEAAAANAAIAAAADAAEAAAANAAMAAAADAAEAAAANAAQAAAADAAEAAAANAAUAAAADAAEAAAANAAYAAAADAAEAAAANAAcAAAAAAAMAAAANAAgAAAAEAAEAAAANAAkAAAAEAAIAAAAOAPf/AAAEAAAAAAAOAPj/AAAEAAEAAAAOAPn/AAAEAAEAAAAOAPr/AAAEAAEAAAAOAPv/AAAEAAEAAAAOAPz/AAAEAAEAAAAOAP3/AAAEAAEAAAAOAP7/AAAEAAEAAAAOAP//AAAEAAEAAAAOAAAAAAAEAAEAAAAOAAEAAAAEAAEAAAAOAAIAAAAEAAEAAAAOAAMAAAAEAAEAAAAOAAQAAAAEAAEAAAAOAAUAAAAEAAEAAAAOAAYAAAAEAAEAAAAOAAcAAAAEAAEAAAAOAAgAAAAEAAEAAAAOAAkAAAAEAAIAAAAPAPf/AAAFAAAAAAAPAPj/AAAFAAEAAAAPAPn/AAAFAAEAAAAPAPr/AAAFAAEAAAAPAPv/AAAFAAEAAAAPAPz/AAAFAAEAAAAPAP3/AAAFAAEAAAAPAP7/AAAFAAEAAAAPAP//AAAFAAEAAAAPAAAAAAAFAAEAAAAPAAEAAAAFAAEAAAAPAAIAAAAFAAEAAAAPAAMAAAAFAAEAAAAPAAQAAAAFAAEAAAAPAAUAAAAFAAEAAAAPAAYAAAAFAAEAAAAPAAcAAAAFAAEAAAAPAAgAAAAFAAEAAAAPAAkAAAAFAAIAAAA=")
tile_set = ExtResource("2_08n1b")

[node name="PlayerCharacter" parent="." unique_id=824779425 instance=ExtResource("1_3x8yu")]
y_sort_enabled = true
